src/assets/css/styles.css
:root {
  --fixed-toolbar-height: 60px;
  --progress-bar-height: 3px;
  --standard-field-width: 300px;
  --dial-right-pos: 40px;
  --dial-box-size: 64px;
  --dial-badge-size: 20px;
  --mobile-breakpoint: 850px;
}

/* TODO Any place to use this cool old DOS-style console font?
@font-face {
  font-family: FixedsysExcelsior301Regular;
  src: url(../fonts/fixedsys-excelsior.woff2) format("woff2");
  font-weight: 400;
  font-style: normal;
  -webkit-font-smoothing: none;
  -moz-osx-font-smoothing: none;
  font-smooth: never;
}

html, body, body .p-component {
  font-family: FixedsysExcelsior301Regular !important;
}
*/

html, body {
  margin: 0;
  padding: 0;
  width: 100%;
}

html {
  height: 100%;
}

.pointer {
  cursor: pointer;
}

.center {
  text-align: center;
  margin-left: auto;
  margin-right: auto;
}

.pos-fixed {
  position: fixed;
}

.fleft, .desktop-fleft {
  float: left;
}

.fright, .desktop-fright {
  float: right;
}

.inline, .desktop-inline {
  display: inline-block;
}

.checkbox-label-on-left {
  flex-direction: row-reverse;
}

.subtext {
  font-size: 12px;
}

.red-error {
  color: #DD0000;
}

.green-success {
  color: #00DD00;
}

.consistent-field {
  width: var(--standard-field-width);
}

.indent {
  padding-top: 5px;
  padding-left: 20px;
}

.favorite-dialog .p-dialog-content {
  display: block !important;
}

.chooser-result {
  line-height: 48px;
  padding: 0 10px;
}

.updated-col-sort svg {
  margin-left: 0;
}

.shine-image {
  mask: linear-gradient(135deg,#000c 40%,#000,#000c 60%) 100% 100%/250% 250%;
  transition: 0.4s;
}

.shine-image:hover {
  mask-position: 0 0;
}

#limitDate {
  max-width: var(--standard-field-width);
}

.our-textarea {
  width: 95% !important;
  max-height: 30vh;
}

.md-note {
  font-size: 10px;
}

.hide-on-desktop {
  display: none;
}

@media (max-width: 850px) { /* var(--mobile-breakpoint) equivalent, just can't use in media queries */
  :root {
    --standard-field-width: 175px;
  }
  
  .hide-on-mobile {
    display: none;
  }
  .hide-on-desktop {
    display: unset;
  }
  
  .desktop-inline {
    display: block;
  }
  
  .desktop-fleft,
  .desktop-fright {
    float: none;
  }
  
  .our-textarea {
    width: calc(95vw - 100px) !important;
  }
  
  .field-label {
    display: block;
  }
}

